Fixed a problem with the page appearing too low

--- a/css/robotolight_minecraft.css
+++ b/css/robotolight_minecraft.css
@@ -90,6 +90,7 @@ body {
     background-size: 175% 175%;
 /*    background-color: rgb(157,229,206);*/
     position: relative;
+    top: -200px;
 /*    box-sizing: content-box;*/
 }
 
